--- a/DeepLearningArchitectures/transformer/research/lab1-attension.ipynb
+++ b/DeepLearningArchitectures/transformer/research/lab1-attension.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,49 +68,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scaled [[0.92437508 0.76109342 0.57632375 0.62003569]\n",
-      " [0.90323288 0.74314335 0.46591913 0.53600242]\n",
-      " [0.93105229 0.80788533 0.59086872 0.60714951]\n",
-      " [0.67256557 0.58922815 0.40639233 0.41051461]]\n",
+      "scaled [[0.87131859 0.86252614 0.48247449 0.6241726 ]\n",
+      " [1.02132395 1.12710965 0.9030035  1.07739794]\n",
+      " [1.02807672 0.91894661 0.71476049 0.99712315]\n",
+      " [0.79079892 0.78990133 0.61787771 0.64059389]]\n",
       "Output:\n",
-      " [[0.58980873 0.65315452 0.58977675 0.75164092 0.60384918 0.42990405\n",
-      "  0.47024889 0.76868091]\n",
-      " [0.58973423 0.65413257 0.59438378 0.74689309 0.60508062 0.43462382\n",
-      "  0.47582019 0.76445329]\n",
-      " [0.59206776 0.6592164  0.59325714 0.74994701 0.60851148 0.42665397\n",
-      "  0.47231488 0.76395251]\n",
-      " [0.5953361  0.66124875 0.59208973 0.75184169 0.6111631  0.41866359\n",
-      "  0.46786183 0.76384738]]\n",
+      " [[0.39125901 0.6638908  0.44900505 0.42719732 0.66951825 0.6359097\n",
+      "  0.63514343 0.36880897]\n",
+      " [0.41216041 0.69503973 0.4280375  0.400267   0.68886302 0.61062178\n",
+      "  0.61598543 0.37990854]\n",
+      " [0.40441745 0.67985271 0.43528608 0.42071218 0.68552592 0.6053806\n",
+      "  0.62497903 0.38505464]\n",
+      " [0.38840181 0.68091523 0.44167785 0.42328641 0.67909902 0.62552722\n",
+      "  0.63767863 0.36375848]]\n",
       "Attention:\n",
-      " [[0.30367215 0.25792453 0.21441156 0.22399176]\n",
-      " [0.31343185 0.26706509 0.2024045  0.21709857]\n",
-      " [0.30128865 0.26637413 0.21440895 0.21792827]\n",
-      " [0.28936702 0.26622942 0.22174379 0.22265977]]\n",
-      "scaled [[0.92437508       -inf       -inf       -inf]\n",
-      " [0.90323288 0.74314335       -inf       -inf]\n",
-      " [0.93105229 0.80788533 0.59086872       -inf]\n",
-      " [0.67256557 0.58922815 0.40639233 0.41051461]]\n",
+      " [[0.2898456  0.28730832 0.19646893 0.22637715]\n",
+      " [0.2464468  0.27394623 0.21894612 0.26066085]\n",
+      " [0.27799762 0.24925649 0.20322146 0.26952442]\n",
+      " [0.27020906 0.26996663 0.22730091 0.23252341]]\n",
+      "scaled [[0.87131859       -inf       -inf       -inf]\n",
+      " [1.02132395 1.12710965       -inf       -inf]\n",
+      " [1.02807672 0.91894661 0.71476049       -inf]\n",
+      " [0.79079892 0.78990133 0.61787771 0.64059389]]\n",
       "Output with mask:\n",
-      " [[0.31471367 0.48442819 0.55264977 0.74357197 0.35676674 0.95091744\n",
-      "  0.68359855 0.89641877]\n",
-      " [0.56971384 0.71954319 0.6978605  0.6576692  0.64068021 0.54892821\n",
-      "  0.61849438 0.66553524]\n",
-      " [0.55796366 0.78811287 0.64194667 0.74641224 0.6533264  0.47041898\n",
-      "  0.56330402 0.70460616]\n",
-      " [0.5953361  0.66124875 0.59208973 0.75184169 0.6111631  0.41866359\n",
-      "  0.46786183 0.76384738]]\n",
+      " [[0.0417585  0.26769124 0.71248307 0.94398826 0.48935248 0.77218906\n",
+      "  0.97777999 0.26722768]\n",
+      " [0.33396451 0.49013788 0.55726389 0.49832409 0.54361588 0.82607508\n",
+      "  0.68098118 0.3207578 ]\n",
+      " [0.24872821 0.59618373 0.52908912 0.53328967 0.60396645 0.76228706\n",
+      "  0.75989319 0.24462326]\n",
+      " [0.38840181 0.68091523 0.44167785 0.42328641 0.67909902 0.62552722\n",
+      "  0.63767863 0.36375848]]\n",
       "Attention with mask:\n",
       " [[1.         0.         0.         0.        ]\n",
-      " [0.53993713 0.46006287 0.         0.        ]\n",
-      " [0.38524426 0.34060063 0.2741551  0.        ]\n",
-      " [0.28936702 0.26622942 0.22174379 0.22265977]]\n"
+      " [0.47357821 0.52642179 0.         0.        ]\n",
+      " [0.38057073 0.34122495 0.27820432 0.        ]\n",
+      " [0.27020906 0.26996663 0.22730091 0.23252341]]\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,23 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# now we will divide the chuck of each head into q, k, v\u001b[39;00m\n\u001b[32m     19\u001b[39m q, k, v=qkv.chunk(\u001b[32m3\u001b[39m, dim=-\u001b[32m1\u001b[39m) \u001b[38;5;66;03m# divide last dimension by 3 i.e 192/3 = 64\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m values, attention = scaled_dot_product(q, k, v, mask=mask)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mscaled_dot_product\u001b[39m\u001b[34m(q, k, v, mask)\u001b[39m\n\u001b[32m      3\u001b[39m scaled = torch.matmul(q, k.transpose(-\u001b[32m1\u001b[39m, -\u001b[32m2\u001b[39m)) / math.sqrt(d_k)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mask \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     scaled += mask\n\u001b[32m      6\u001b[39m attention = F.softmax(scaled, dim=-\u001b[32m1\u001b[39m)\n\u001b[32m      7\u001b[39m values = torch.matmul(attention, v)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/ai-agents/lib/python3.13/site-packages/torch/_tensor.py:1225\u001b[39m, in \u001b[36mTensor.__array__\u001b[39m\u001b[34m(self, dtype)\u001b[39m\n\u001b[32m   1223\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(Tensor.__array__, (\u001b[38;5;28mself\u001b[39m,), \u001b[38;5;28mself\u001b[39m, dtype=dtype)\n\u001b[32m   1224\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1225\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.numpy()\n\u001b[32m   1226\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1227\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.numpy().astype(dtype, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[31mRuntimeError\u001b[39m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sequence_length = 4 # My name is Ankit\n",
     "batch_size = 1 # number of sentences in batch\n",
@@ -206,12 +192,12 @@
     "# now we will divide the chuck of each head into q, k, v\n",
     "q, k, v=qkv.chunk(3, dim=-1) # divide last dimension by 3 i.e 192/3 = 64\n",
     "\n",
-    "values, attention = scaled_dot_product(q, k, v, mask=mask)\n"
+    "values, attention = scaled_dot_product(q, k, v)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
