--- a/LLMsAgents/llm-finetuning/peft-from-scratch.ipynb
+++ b/LLMsAgents/llm-finetuning/peft-from-scratch.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1 align=\"center\">PEFT from Scratch</h1>\n",
     "Questions\n",
     "1. How to implement different PEFT approaches ?\n",
     "2. How to update these large pre-trained models with low resources  ?\n",
@@ -976,6 +977,81 @@
     "print(f'Param introduced by LoRA: {total_param_lora:,}')\n",
     "param_incremment = (total_param_lora / total_param_non_lora) * 100\n",
     "print(f'Param incremment: {param_incremment:.3f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Freeze all params of the original model\n",
+    "for name, param in model.named_parameters():\n",
+    "    if 'lora' not in name:\n",
+    "        print(f\"Freezing Original params of models :  {name}\")\n",
+    "        param.requires_grad=False\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "# 2. Finetuning the models params that introduced by LoRA on training digit 2\n",
+    "# let's load the mnist data set and keeping only the digit 2\n",
+    "train = datasets.MNIST(\n",
+    "    './dataset',\n",
+    "    train=True,\n",
+    "    download=True,\n",
+    "    transform=transform,\n",
+    "    )\n",
+    "exclud_idx = train.targets = 2\n",
+    "train.data = train.data[exclud_idx]\n",
+    "train.targets = train.targets[exclud_idx]\n",
+    "\n",
+    "# creating the dataloader for the training\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    train,\n",
+    "    batch_size=10,\n",
+    "    suffle=True)\n",
+    "\n",
+    "# Train the network with LoRA only on the digit 2 and only for 100 batches (hoping that it would improve the performance on the digit 9)\n",
+    "train(train_loader, model, epochs=1, total_iterations_limit=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify that the fine-tuning didn't alter the original weights, but only the ones introduced by LoRA.\n",
+    "# Check that the frozen parameters are still unchanged by the finetuning\n",
+    "assert torch.all(net.linear1.parametrizations.weight.original == original_weights['linear1.weight'])\n",
+    "assert torch.all(net.linear2.parametrizations.weight.original == original_weights['linear2.weight'])\n",
+    "assert torch.all(net.linear3.parametrizations.weight.original == original_weights['linear3.weight'])\n",
+    "\n",
+    "enable_disable_lora(enabled=True)\n",
+    "# The new linear1.weight is obtained by the \"forward\" function of our LoRA parametrization\n",
+    "# The original weights have been moved to net.linear1.parametrizations.weight.original\n",
+    "# More info here: https://pytorch.org/tutorials/intermediate/parametrizations.html#inspecting-a-parametrized-module\n",
+    "assert torch.equal(net.linear1.weight, net.linear1.parametrizations.weight.original + (net.linear1.parametrizations.weight[0].lora_B @ net.linear1.parametrizations.weight[0].lora_A) * net.linear1.parametrizations.weight[0].scale)\n",
+    "\n",
+    "enable_disable_lora(enabled=False)\n",
+    "# If we disable LoRA, the linear1.weight is the original one\n",
+    "assert torch.equal(net.linear1.weight, original_weights['linear1.weight'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test the network with LoRA enabled (the digit 9 should be classified better)\n",
+    "# Test with LoRA enabled\n",
+    "enable_disable_lora(enabled=True)\n",
+    "test()\n",
+    "# Test the network with LoRA disabled (the accuracy and errors counts must be the same as the original network)\n",
+    "# Test with LoRA disabled\n",
+    "enable_disable_lora(enabled=False)\n",
+    "test()\n"
    ]
   },
   {
